--- a/Assets/Scripts/SpellProject/Utility/SpellProject.Utility.asmdef
+++ b/Assets/Scripts/SpellProject/Utility/SpellProject.Utility.asmdef
@@ -1,3 +1,14 @@
 {
-	"name": "SpellProject.Utility"
+    "name": "SpellProject.Utility",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
